fixtures/frontend/milestone-2/invalid/unpaired-truthy-falsy/main.aivi
val ready = True
val start = "start"

val branch =
    ready
     T|> start
